turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:2: error: not found: value lign
  lign();
  ^